# darkflipper

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
darkflipper/: __init__.py  fob.py  fom.py  pte.py
notebooks/: DEMO.ipynb
