[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkflipper"
description = "Dark Energy Figure of Merit and Figure of Bias for Likelihood Pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Guadalupe Cañas Herrera", email = "canasherrera@strw.leidenuniv.nl" }
]
keywords = ["dark energy", "cosmology", "Euclid", "Bayesian inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["."]

[tool.hatch.build.hooks.vcs]
version-file = "darkflipper/_version.py"
